--- a/package.json
+++ b/package.json
@@ -67,7 +67,10 @@
       "**/hardhat-ts/**"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "mime": "^3.0.0",
+    "nft.storage": "^6.0.2"
+  },
   "devDependencies": {
     "husky": "^7.0.2"
   }
