--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -15,9 +15,11 @@
     ]
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.2.5",
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.3.21",
     "@apollo/react-hooks": "^4.0.0",
+    "@ethersproject/contracts": "^5.6.0",
     "@portis/web3": "^4.0.5",
     "@ramp-network/ramp-instant-sdk": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.4",
