--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -39,12 +39,16 @@
     "bnc-notify": "^1.5.0",
     "dotenv": "^8.6.0",
     "eth-hooks": "2.3.16",
-    "ethers": "^5.4.1",
+    "ethers": "^5.6.1",
     "fortmatic": "^2.2.1",
     "graphiql": "^1.4.7",
     "graphql": "^15.3.0",
+    "ipfs": "^0.62.1",
+    "ipfs-fetch": "^0.2.1",
     "ipfs-http-client": "^55.0.0",
     "isomorphic-fetch": "^3.0.0",
+    "js-ipfs-fetch": "^3.5.1",
+    "moralis": "^1.5.4",
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
     "qrcode.react": "^1.0.0",
@@ -52,6 +56,7 @@
     "react-blockies": "^1.4.1",
     "react-css-theme-switcher": "^0.2.2",
     "react-dom": "^17.0.2",
+    "react-moralis": "^1.3.2",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
