--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "dependencies": {
     "ipfs-car": "^0.6.2",
+    "ipfs-mini": "^1.1.5",
     "mime": "^3.0.0",
     "nft.storage": "^6.0.2",
     "react-router-dom": "^6.2.2"
