--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -92,7 +92,7 @@
     }
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "eject": "react-scripts eject",
     "prestart": "node ./scripts/create_contracts.js",
     "start": "react-scripts start",
