--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -99,7 +99,7 @@
     "test": "react-scripts test",
     "lint": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore ./src/**/*",
     "ipfs": "node ./scripts/ipfs.js",
-    "surge": "cp build/index.html build/200.html && surge ./build",
+    "surge": "copy build/index.html build/200.html && surge ./build",
     "s3": "node ./scripts/s3.js",
     "ship": "yarn surge",
     "theme": "npx gulp less",
