--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "ipfs-mini": "^1.1.5",
     "mime": "^3.0.0",
     "nft.storage": "^6.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "husky": "^7.0.2"
